# s-h

./: .gitignore  README.md
16.6/quest1/: main.cpp
Homework-1/quest1/: CMakeLists.txt
Homework-1/quest2/: main.cpp
Homework-1/quest3/: main.cpp
Homework-1/quest4/: main.cpp
Homework-10/task1/: final_file.txt  main.cpp
Homework-10/task2/: main.cpp  pic.txt
Homework-10/task3/: main.cpp
Homework-10/task4/: CMakeLists.txt  main.cpp
Homework-11/task01/: CMakeLists.txt  main.cpp
Homework-11/task2/: CMakeLists.txt  main.cpp
Homework-11/task3/: CMakeLists.txt  main.cpp
Homework-12/task1/: main.cpp
Homework-12/task2/: task2.sln
Homework-12/task3/: task3.sln
Homework-13/task1/: task1.sln
Homework-13/task2/: task2.sln
Homework-13/task3/: task3.sln
Homework-14/Task1/: Task1.sln
Homework-14/task2/: task2.sln
Homework-14/task3/: task3.sln
Homework-15/task1/: CMakeLists.txt
Homework-15/task2/: CMakeLists.txt
Homework-15/task2/source/: CMakeLists.txt  cpu.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
Homework-16/task1/: CMakeLists.txt  main.cpp
Homework-16/task2/: CMakeLists.txt  main.cpp
Homework-16/task3/: CMakeLists.txt  main.cpp
Homework-17/task1/: CMakeLists.txt  main.cpp
Homework-17/task2/: CMakeLists.txt  main.cpp
Homework-17/task3/: CMakeLists.txt  main.cpp
Homework-18/task1/: CMakeLists.txt  main.cpp
Homework-18/task2/: CMakeLists.txt  main.cpp
Homework-18/task3/: CMakeLists.txt  (+1 more)
Homework-20/task 2/: CMakeLists.txt  main.cpp
Homework-20/task01/: CMakeLists.txt  cpr_del.cpp  cpr_del.h  cpr_get.cpp  cpr_get.h  cpr_patch.cpp  cpr_patch.h  cpr_put.cpp  cpr_put.h  gpr_post.cpp  gpr_post.h  main.cpp
Module-19/: CMakeLists.txt
(+106 files in other folders)
